Naast wat stijling van de GUI en het opnieuw schrijven van de Testen alles ad